hphp/hack/test/typecheck/like_types/pessimization/erased_generic_bounded_above.php.exp
File "erased_generic_bounded_above.php", line 13, characters 19-20:
Invalid argument (Typing[4110])
File "erased_generic_bounded_above.php", line 4, characters 26-33:
Expected arraykey
File "erased_generic_bounded_above.php", line 12, characters 23-23:
But got T
